<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_form"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="500dp"
        android:layout_height="350dp"
        android:src="@drawable/loginlogo"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#E94B1B"
        android:textSize="45dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/logEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/logPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/containedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:backgroundTint="@color/design_default_color_primary"
        />

    <TextView
        android:id="@+id/switchToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create a new account"
        android:layout_marginTop="30dp"
        android:textColor="#E94B1B"
        android:textStyle="bold"
        android:textSize="16dp"/>
</LinearLayout>